Fix Ubuntu 24.04 unable to find libqt5core5a libqt5gui5

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -5887,7 +5887,9 @@ libqt5-core:
   opensuse: [libQt5Core5]
   rhel: [qt5-qtbase]
   slackware: [qt5]
-  ubuntu: [libqt5core5a]
+  ubuntu: 
+    '*': [libqt5core5a]
+    noble: [libqt5core5t64]
 libqt5-gstreamer-dev:
   debian: [libqt5gstreamer-dev]
   ubuntu: [libqt5gstreamer-dev]
@@ -5903,7 +5905,9 @@ libqt5-gui:
   opensuse: [libQt5Gui5]
   rhel: [qt5-qtbase-gui]
   slackware: [qt5]
-  ubuntu: [libqt5gui5]
+  ubuntu:
+    '*': [libqt5gui5]
+    noble: [libqt5gui5t64]
 libqt5-multimedia:
   arch: [qt5-multimedia]
   debian: [libqt5multimedia5]
