--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6043,7 +6043,9 @@ libqt5-widgets:
   opensuse: [libQt5Widgets5]
   rhel: [qt5-qtbase]
   slackware: [qt5]
-  ubuntu: [libqt5widgets5]
+  ubuntu: 
+    '*': [libqt5widgets5]
+    noble: [libqt5widgets5t64]
 libqt5-xml:
   arch: [qt5-base]
   debian: [libqt5xml5]
